# zenodo-upload

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi_publish.yml  testing.yml
zenodo-upload/: models.py  upload.py
zenodo-upload/models/: files.py
