[tool.poetry]
name = "zenodo-upload"
version = "0.1.0"
description = "Upload files to zenodo"
authors = ["Marius van den Beek <marius@galaxyproject.org>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "zenodo-upload" }
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
click = "^8.1.7"
dataclasses-json = "^0.6.4"

[tool.poetry.group.dev.dependencies]
black = ">=23"
mypy = ">=1.4"
pre-commit = ">=2"
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.0.285"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=zenodo-upload --cov-report term-missing"

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore = ["E501"]
line-length = 100
target-version = "py37"
fix = true
